<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wall_following</name>
  <version>0.1.0</version>
  <description>ROS2 package for autonomous wall-following with marker start logic and SNC compatibility.</description>

  <maintainer email="rmitaiil@todo.todo">rmitaiil</maintainer>
  <author email="you@example.com">Your Name</author>
  <license>Apache-2.0</license>

  <!-- Runtime Dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>


  <!-- If using camera packages or FindObject2D etc., add here -->
  <depend>aii_rosbot_demo</depend>

  <!-- Testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
